--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,6 @@ apis:
   order: http://localhost:8081/order_api/v1
   image: http://localhost:8082/image_api/v1
   delivery: http://localhost:8083/delivery_api/v1
+  aggregator: http://localhost:8080/aggregator_api/v1
 server:
   port: 8080
